--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -39,12 +39,47 @@
                 <input class="form-control" type="datetime-local" id="inputCreated" th:value="${board.createdAt}"
                        readonly>
             </div>
+            <div>
+                <button class="class btn btn-outline-danger"
+                        data-bs-toggle="modal"
+                        data-bs-target="#removeModal">삭제
+                </button>
+                <button class="class btn btn-primary">수정</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div class="d-none">
+    <form th:action="@{/board/remove}" method="post" id="removeForm">
+        <input type="text" name="id" th:value="${board.id}">
+    </form>
+</div>
+
+<div class="modal fade" id="removeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5">
+                    삭제 확인
+                </h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                삭제 하시겠습니까?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                    취소
+                </button>
+                <button type="submit" form="removeForm" class="btn btn-dange">
+                    삭제
+                </button>
+            </div>
         </div>
     </div>
 </div>
 
 <th:block th:replace="~{layout/main::commonScript}"/>
-
 </body>
 </html>
