--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -8,27 +8,51 @@
           integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-<nav th:fragment="pageNavbar(current)"
-     class="navbar navbar-expand-lg mb-4 bg-body-tertiary">
-    <div class="container">
-        <a th:href="@{/board/list}" class="navbar-brand">PROJECT</a>
-        <button class="navbar-toggler"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a th:href="@{/board/list}" class="nav-link">목록</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/board/write}" class="nav-link">작성</a>
-                </li>
-            </ul>
+<div th:fragment="pageNavbar(current)">
+    <nav
+            class="navbar navbar-expand-lg mb-4 bg-body-tertiary">
+        <div class="container">
+            <a th:href="@{/board/list}" class="navbar-brand">PROJECT</a>
+            <button class="navbar-toggler"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a th:href="@{/board/list}"
+                           class="nav-link"
+                           th:classappend="${current == 'list' ? 'active' : ''}"
+                        >
+                            목록
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a th:href="@{/board/write}"
+                           class="nav-link"
+                           th:classappend="${current == 'write' ? 'active' : ''}"
+                        >
+                            작성
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div th:if="${alert != null}" class="container mb-4">
+        <div class="row">
+            <div class="col">
+                <div th:text="${alert.message}"
+                     th:classappend="|alert-${alert.code}|"
+                     class="alert"
+                     role="alert">
+                    A simple primary alert-check it out!
+                </div>
+            </div>
         </div>
     </div>
-</nav>
+</div>
 
 
 <th:block th:fragment="commonScript">
