--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -14,19 +14,23 @@
             <form th:action="@{/member/signup}" method="post" class="mb-3">
                 <div class="mb-3">
                     <label class="form-label" for="inputId">아이디</label>
-                    <input class="form-control" type="text" id="inputId" name="id">
+                    <input th:value="${member == null ? '' : member.id}" class="form-control" type="text" id="inputId"
+                           name="id">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="inputPassword">암호</label>
-                    <input class="form-control" type="text" id="inputPassword" name="password">
+                    <input th:value="${member == null ? '' : member.password}" class="form-control" type="text"
+                           id="inputPassword" name="password">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="inputNickname">별명</label>
-                    <input class="form-control" type="text" id="inputNickname" name="nickName">
+                    <input th:value="${member == null ? '' : member.nickName}" class="form-control" type="text"
+                           id="inputNickname" name="nickName">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="textareaInfo">자기소개</label>
-                    <textarea class="form-control" name="info" id="textareaInfo" rows="10"></textarea>
+                    <textarea th:text="${member == null ? '' : member.info}" class="form-control" name="info"
+                              id="textareaInfo" rows="10"></textarea>
                 </div>
                 <div>
                     <button class="btn btn-primary">가입</button>
