--- a/src/main/resources/templates/member/view.html
+++ b/src/main/resources/templates/member/view.html
@@ -26,7 +26,7 @@
                        readonly>
             </div>
             <div class="mb-3">
-                <label for="inputCreatedAt" class="form-label"></label>
+                <label for="inputCreatedAt" class="form-label">가입일시</label>
                 <input id="inputCreatedAt" name="createdAt" type="text" class="form-control"
                        th:value="${member.createdAt}" readonly>
             </div>
