--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -19,10 +19,7 @@
                 </thead>
                 <tbody>
                 <tr th:each="member : ${memberList}">
-                    <td>
-                        <a th:href="@{/member/view(id=${member.id})}"
-                           th:text="${member.id}"></a>
-                    </td>
+                    <td th:text="${member.id}"></td>
                     <td th:text="${member.nickName}"></td>
                 </tr>
                 </tbody>
