--- a/src/main/resources/templates/member/view.html
+++ b/src/main/resources/templates/member/view.html
@@ -22,13 +22,53 @@
             </div>
             <div class="mb-3">
                 <label for="textareaInfo" class="form-label">자기소개</label>
-                <input id="textareaInfo" name="info" type="text" class="form-control" th:value="${member.info}"
+                <input rows="3" id="textareaInfo" name="info" type="text" class="form-control" th:value="${member.info}"
                        readonly>
             </div>
             <div class="mb-3">
                 <label for="inputCreatedAt" class="form-label">가입일시</label>
                 <input id="inputCreatedAt" name="createdAt" type="text" class="form-control"
                        th:value="${member.createdAt}" readonly>
+            </div>
+            <div>
+                <button class="class btn btn-outline-danger"
+                        data-bs-toggle="modal"
+                        data-bs-target="#removeModal">회원 탈퇴
+                </button>
+                <button class="btn btn-outline-secondary">수정</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="removeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5">
+                    탈퇴 확인
+                </h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form th:action="@{/member/remove}" method="post" id="removeForm">
+                    <input type="hidden" name="id" th:value="${member.id}">
+                    <div>
+                        <label for="inputPassword" class="form-label">암호</label>
+                        <input placeholder="기존 암호를 입력하세요."
+                               type="password"
+                               class="form-control"
+                               id="inputPassword" name="password">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                    취소
+                </button>
+                <button type="submit" form="removeForm" class="btn btn-danger">
+                    탈퇴
+                </button>
             </div>
         </div>
     </div>
