로그아웃 기능 추가

--- a/src/main/resources/templates/member/view.html
+++ b/src/main/resources/templates/member/view.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<nav th:replace="~{layout/main::pageNavbar('회원 목록')}"></nav>
+<nav th:replace="~{layout/main::pageNavbar('memberView')}"></nav>
 
 <div class="container">
     <div class="row justify-content-center">
