--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -60,6 +60,21 @@
                             로그인
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a th:href="@{/member/logout}"
+                           class="nav-link"
+                        >
+                            로그아웃
+                        </a>
+                    </li>
+                    <li class="nav-item" th:if="${session.loggedInUser != null}">
+                        <a th:href="@{/member/view(id=${session.loggedInUser.id})}"
+                           class="nav-link"
+                           th:classappend="${current == 'memberView' ? 'active' : ''}"
+                        >
+                            <span th:text="${session.loggedInUser.nickName}">별명</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
