--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -28,7 +28,7 @@
                             목록
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" th:if="${session.loggedInUser != null}">
                         <a th:href="@{/board/write}"
                            class="nav-link"
                            th:classappend="${current == 'write' ? 'active' : ''}"
@@ -45,14 +45,14 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a th:href="@{/member/list}"
+                        <a th:href="@{/member/list}" th:if="${session.loggedInUser != null}"
                            class="nav-link"
                            th:classappend="${current == 'memberList' ? 'active' : ''}"
                         >
                             회원목록
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" th:if="${session.loggedInUser == null}">
                         <a th:href="@{/member/login}"
                            class="nav-link"
                            th:classappend="${current == 'login' ? 'active' : ''}"
@@ -60,7 +60,7 @@
                             로그인
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" th:if="${session.loggedInUser != null}">
                         <a th:href="@{/member/logout}"
                            class="nav-link"
                         >
