게시물 하나보기

--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -42,7 +42,8 @@
                 <input class="form-control" type="datetime-local" id="inputCreated" th:value="${board.createdAt}"
                        readonly>
             </div>
-            <div>
+            <div th:if="${(session.loggedInUser != null) && (session.loggedInUser.id ==
+            board.writer.id)}">
                 <button class="class btn btn-outline-danger"
                         data-bs-toggle="modal"
                         data-bs-target="#removeModal">삭제
