--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -41,8 +41,8 @@
                     <li class="page-item"
                         th:if="${leftPageNumber > 10}">
                         <a class="page-link"
-                           th:href="@{/board/list(page=${leftPageNumber - 10})}"
-                        >
+                           th:href="@{/board/list(page=${leftPageNumber
+                           - 10},keyword=${param.keyword})}">
                             <span>&laquo;</span>
                         </a>
                     </li>
@@ -50,13 +50,14 @@
                         th:each="pageNumber : ${#numbers.sequence(leftPageNumber, rightPageNumber)}"
                         th:classappend="${(currentPage == pageNumber) ? 'active' : ''}">
                         <a class="page-link"
-                           th:href="@{/board/list(page=${pageNumber})}"
+                           th:href="@{/board/list(page=${pageNumber},keyword=${param.keyword})}"
                            th:text="${pageNumber}"></a>
                     </li>
                     <li class="page-item"
                         th:if="${(rightPageNumber + 1) <= totalPages}">
                         <a class="page-link"
-                           th:href="@{/board/list(page=${rightPageNumber + 1})}">
+                           th:href="@{/board/list(page=${rightPageNumber +
+                           1},keyword=${param.keyword})}">
                             <span>&raquo;</span>
                         </a>
                     </li>
