--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -6,6 +6,9 @@
     <title th:text="${title}">Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+          integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
 <div th:fragment="pageNavbar(current)">
@@ -19,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 order-lg-1">
                     <li class="nav-item">
                         <a th:href="@{/board/list}"
                            class="nav-link"
@@ -36,7 +39,9 @@
                             작성
                         </a>
                     </li>
-                    <li class="nav-item">
+                </ul>
+                <ul class="navbar-nav mb-2 mb-lg-0 order-lg-3 ms-auto">
+                    <li class="nav-item" th:if="${session.loggedInUser == null}">
                         <a th:href="@{/member/signup}"
                            class="nav-link"
                            th:classappend="${current == 'signup' ? 'active' : ''}"
@@ -72,10 +77,23 @@
                            class="nav-link"
                            th:classappend="${current == 'memberView' ? 'active' : ''}"
                         >
+                            <i class="fa-regular fa-circle-user"></i>
                             <span th:text="${session.loggedInUser.nickName}">별명</span>
                         </a>
                     </li>
                 </ul>
+                <form th:action="@{/board/list}" class="d-flex order-lg-2">
+                    <input type="text"
+                           class="form-control me-2"
+                           name="keyword"
+                           th:value="${(param.keyword == null || param.keyword[0].isBlank()) ? '' :
+                    param.keyword[0]}">
+                    <button class="btn btn-outline-success">
+                        <span style="word-break: keep-all">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        </span>
+                    </button>
+                </form>
             </div>
         </div>
     </nav>
