--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -33,6 +33,15 @@
                         항상 아이디 기억하기
                     </label>
                 </div>
+                <div class="form-check mb-3">
+                    <input class="form-check-input"
+                           type="checkbox"
+                           id="loginMaintainCheckbox"
+                           name="loginMaintain">
+                    <label class="form-check-label" for="loginMaintainCheckbox">
+                        항상 로그인 유지하기
+                    </label>
+                </div>
                 <div class="mb-3">
                     <button class="btn btn-primary">로그인</button>
                 </div>
