--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -47,11 +47,16 @@
                         </a>
                     </li>
                     <li class="page-item"
-                        th:each="pageNumber : ${#numbers.sequence(leftPageNumber, rightPageNumber)}"
+                        th:each="pageNumber : ${pageList}"
                         th:classappend="${(currentPage == pageNumber) ? 'active' : ''}">
+
                         <a class="page-link"
+                           th:if="${pageNumber != -1}"
                            th:href="@{/board/list(page=${pageNumber},keyword=${param.keyword})}"
                            th:text="${pageNumber}"></a>
+
+                        <span class="page-link"
+                              th:if="${pageNumber == -1}">...</span>
                     </li>
                     <li class="page-item"
                         th:if="${(rightPageNumber + 1) <= totalPages}">
