--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -39,7 +39,7 @@
             <nav>
                 <ul class="pagination justify-content-center">
                     <li class="page-item"
-                        th:if="${leftPageNumber > 10}">
+                        th:if="${currentPage > 1}">
                         <a class="page-link"
                            th:href="@{/board/list(page=${leftPageNumber
                            - 10},keyword=${param.keyword})}">
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                     <li class="page-item"
-                        th:if="${leftPageNumber > 1}">
+                        th:if="${currentPage > 1}">
                         <a class="page-link"
                            th:href="@{/board/list(page=${currentPage - 1}, keyword=${keyword})}">
                             <span>&lt;</span>
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     <li class="page-item"
-                        th:if="${(rightPageNumber + 1) <= totalPages}">
+                        th:if="${currentPage < totalPages}">
                         <a class="page-link"
                            th:href="@{/board/list(page=${rightPageNumber +
                            1},keyword=${param.keyword})}">
