--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -46,8 +46,7 @@
                     <li class="page-item"
                         th:if="${currentPage > 1}">
                         <a class="page-link"
-                           th:href="@{/board/list(page=${leftPageNumber
-                           - 10},keyword=${param.keyword})}">
+                           th:href="@{/board/list(page=${T(java.lang.Math).max(1, leftPageNumber - 10)},keyword=${param.keyword})}">
                             <span>&laquo;</span>
                         </a>
                     </li>
