157~페이지부터 10페이지씩 넘길때마다 167페이지로 가지는 오류 수정

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -79,8 +79,7 @@
                     <li class="page-item"
                         th:if="${currentPage < totalPages}">
                         <a class="page-link"
-                           th:href="@{/board/list(page=${rightPageNumber +
-                           1},keyword=${param.keyword})}">
+                           th:href="@{/board/list(page=${T(java.lang.Math).min(totalPages, rightPageNumber + 10)},keyword=${param.keyword})}">
                             <span>&raquo;</span>
                         </a>
                     </li>
